[feat] edit user in admin and delete user

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,6 +41,7 @@ button {
 @import url('./components/utils/notification/Notification.css');
 @import url('./components/utils/notFound/NotFound.css');
 @import url('./components/page/page.css');
+@import url('./components/page/admin/admin.css');
 
 /* Color*/
 :root {
