--- a/client/src/components/auth/auth.css
+++ b/client/src/components/auth/auth.css
@@ -175,3 +175,30 @@ p {
   margin-right: 10px;
   border-radius: 10px;
 }
+
+/* social media login */
+
+.social-media-login {
+  display: flex;
+  justify-content: center;
+  margin: 0px 0px 0px 0px;
+  padding: auto;
+}
+
+.social-media-login p{ 
+  text-align: center;
+  margin: 20px 0;
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.social-media {
+  display: flex;
+  justify-content: center;
+  margin: 0px 0px 0px 0px;
+  padding: auto;
+}
+
+.social-media a {
+  margin: 0px 10px 0px 10px;
+}
