--- a/client/src/components/page/page.css
+++ b/client/src/components/page/page.css
@@ -130,16 +130,18 @@
   color: red;
 }
 .customers .fa-edit{
-  background: whitesmoke;
-  padding: 7px;
-  color: #555;
+  background: var(--white);
+  padding: 10px;
+  color: #000000;
   font-size: 10px;
 }
-.customers .fa-trash-alt{
+.customers .fa-trash{
   background: red;
   padding: 7px;
   color: white;
-  font-size: 10px;
+  font-size: 15px;
+  text-align: center;
+  width: 15px;
   margin-left: 7px;
 }
 
